ask section added

--- a/views/index.html
+++ b/views/index.html
@@ -328,7 +328,11 @@
             </div>
             <ul class="offer__menu">
               <li class="offer__item">
-                <img src="../scss/pages/main/offer-1.png" alt="" class="offer__img" />
+                <img
+                  src="../scss/pages/main/offer-1.png"
+                  alt=""
+                  class="offer__img"
+                />
                 <div class="offer__subinfo">
                   <h3 class="offer__subtitle">HYUNDAI Elantra</h3>
                   <h4 class="offer__subminititle">Comfort</h4>
@@ -353,7 +357,11 @@
                 </div>
               </li>
               <li class="offer__item">
-                <img src="../scss/pages/main/offer-1.png" alt="" class="offer__img" />
+                <img
+                  src="../scss/pages/main/offer-1.png"
+                  alt=""
+                  class="offer__img"
+                />
                 <div class="offer__subinfo">
                   <h3 class="offer__subtitle">HYUNDAI Elantra</h3>
                   <h4 class="offer__subminititle">Comfort</h4>
@@ -378,7 +386,11 @@
                 </div>
               </li>
               <li class="offer__item">
-                <img src="../scss/pages/main/offer-2.png" alt="" class="offer__img" />
+                <img
+                  src="../scss/pages/main/offer-2.png"
+                  alt=""
+                  class="offer__img"
+                />
                 <div class="offer__subinfo">
                   <h3 class="offer__subtitle">KIA Carnival</h3>
                   <h4 class="offer__subminititle">Comfort</h4>
@@ -403,7 +415,11 @@
                 </div>
               </li>
               <li class="offer__item">
-                <img src="../scss/pages/main/offer-3.png" alt="" class="offer__img" />
+                <img
+                  src="../scss/pages/main/offer-3.png"
+                  alt=""
+                  class="offer__img"
+                />
                 <div class="offer__subinfo">
                   <h3 class="offer__subtitle">MITSUBISHI Outlander</h3>
                   <h4 class="offer__subminititle">Comfort</h4>
@@ -428,7 +444,11 @@
                 </div>
               </li>
               <li class="offer__item">
-                <img src="../scss/pages/main/offer-3.png" alt="" class="offer__img" />
+                <img
+                  src="../scss/pages/main/offer-3.png"
+                  alt=""
+                  class="offer__img"
+                />
                 <div class="offer__subinfo">
                   <h3 class="offer__subtitle">MITSUBISHI Outlander</h3>
                   <h4 class="offer__subminititle">Comfort</h4>
@@ -462,20 +482,44 @@
             <h2 class="advan__title">Преимущества обращения к нам</h2>
             <ul class="advan__menu">
               <li class="advan__item">
-                <img src="../scss/pages/main/advan-1.png" alt="" class="advan__img">
-                <p class="advan__text">Больший выбор автомобилей в наличии и под заказ</p>
+                <img
+                  src="../scss/pages/main/advan-1.png"
+                  alt=""
+                  class="advan__img"
+                />
+                <p class="advan__text">
+                  Больший выбор автомобилей в наличии и под заказ
+                </p>
               </li>
               <li class="advan__item">
-                <img src="../scss/pages/main/advan-2.png" alt="" class="advan__img">
-                <p class="advan__text">Более 50 банков партнеров с выгодными условиями</p>
+                <img
+                  src="../scss/pages/main/advan-2.png"
+                  alt=""
+                  class="advan__img"
+                />
+                <p class="advan__text">
+                  Более 50 банков партнеров с выгодными условиями
+                </p>
               </li>
               <li class="advan__item">
-                <img src="../scss/pages/main/advan-1.png" alt="" class="advan__img">
-                <p class="advan__text">Больший выбор автомобилей в наличии и под заказ</p>
+                <img
+                  src="../scss/pages/main/advan-1.png"
+                  alt=""
+                  class="advan__img"
+                />
+                <p class="advan__text">
+                  Больший выбор автомобилей в наличии и под заказ
+                </p>
               </li>
               <li class="advan__item">
-                <img src="../scss/pages/main/advan-1.png" alt="" class="advan__img">
-                <p class="advan__text">Больший выбор автомобилей в наличии и под заказ</p>
+                <img
+                  src="../scss/pages/main/advan-1.png"
+                  alt=""
+                  class="advan__img"
+                />
+                <p class="advan__text">
+                  Больший выбор автомобилей в наличии и под заказ
+                </p>
               </li>
             </ul>
           </div>
@@ -484,12 +528,54 @@
       <sectino class="add">
         <div class="container">
           <div class="add__wrapper">
-            <img src="../scss/pages/main/add-1.png" alt="" class="add__img add-1">
-            <img src="../scss/pages/main/add-2.png" alt="" class="add__img add-2">
-            <img src="../scss/pages/main/add-3.png" alt="" class="add__img add-3">
+            <img
+              src="../scss/pages/main/add-1.png"
+              alt=""
+              class="add__img add-1"
+            />
+            <img
+              src="../scss/pages/main/add-2.png"
+              alt=""
+              class="add__img add-2"
+            />
+            <img
+              src="../scss/pages/main/add-3.png"
+              alt=""
+              class="add__img add-3"
+            />
           </div>
         </div>
       </sectino>
+      <section class="ask">
+        <div class="container">
+          <div class="ask__wrapper">
+            <h2 class="ask__title">Остались вопросы?</h2>
+            <p class="ask__text">
+              Мы свяжемся с Вами в течении 10 минут и ответим на них.
+            </p>
+            <div class="ask__info">
+              <div class="ask__box">Ваше имя</div>
+              <div class="ask__box">+7 999 999-99-99</div>
+              <div class="ask__box">Ваш email</div>
+              <button class="ask__btn">Подобрать </button>
+            </div>
+            <label for="user__accept" class="click__label">
+              <input
+                required
+                type="checkbox"
+                name="user__accept"
+                id="user__accept"
+                class="click__input"
+              />
+              <span class="label-text"
+                >Я соглашаюсь с <span class="special-text">условиями</span> и
+                даю свое согласие на обработку и использование моих персональных
+                данных</span
+              >
+            </label>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
