--- a/css/main.css
+++ b/css/main.css
@@ -481,6 +481,9 @@ body {
   row-gap: 15px;
   -moz-column-gap: 30px;
        column-gap: 30px;
+  border-top: 1px solid #C7C7C7;
+  border-bottom: 1px solid #C7C7C7;
+  padding: 15px 0;
 }
 
 .offer__item {
@@ -556,4 +559,50 @@ body {
 
 .add-1 {
   grid-row: 2 span;
+}
+
+.ask__wrapper {
+  margin: 0 309px;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  background-image: url("/scss/pages/main/blacj.jpg");
+  color: #FFFFFF;
+}
+
+.ask__title {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.ask__text {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.ask__info {
+  display: flex;
+  gap: 20px;
+  margin-top: 25px;
+}
+
+.ask__box {
+  padding: 20px 25px;
+  width: 245px;
+  background-color: #FFFFFF;
+  border-radius: 4px;
+  color: #C7C7C7;
+  position: relative;
+  height: 60px;
+}
+
+.ask__btn {
+  padding: 20px 81px;
+  background-color: #DC4433;
+  border-style: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #FFFFFF;
 }/*# sourceMappingURL=main.css.map */
