--- a/scss/pages/_main.scss
+++ b/scss/pages/_main.scss
@@ -357,6 +357,9 @@
   grid-template-columns: 1fr 1.2fr;
   row-gap: 15px;
   column-gap: 30px;
+  border-top: 1px solid $light-grey;
+  border-bottom: 1px solid $light-grey;
+  padding: 15px 0;
 }
 
 .offer__item {
@@ -432,4 +435,50 @@
 
 .add-1 {
   grid-row: 2 span;
+}
+
+.ask__wrapper {
+  margin: 0 309px;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  background-image: url("/scss/pages/main/blacj.jpg");
+  color: $white;
+}
+
+.ask__title {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.ask__text {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.ask__info {
+  display: flex;
+  gap: 20px;
+  margin-top: 25px;
+}
+
+.ask__box {
+  padding: 20px 25px;
+  width: 245px;
+  background-color: $white;
+  border-radius: 4px;
+  color: $light-grey;
+  position: relative;
+  height: 60px;
+}
+
+.ask__btn {
+  padding: 20px 81px;
+  background-color: $color-red;
+  border-style: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: $white;
 }
