--- a/views/index.html
+++ b/views/index.html
@@ -546,6 +546,40 @@
           </div>
         </div>
       </sectino>
+      <section class="credit">
+        <div class="container">
+          <div class="credit__wrapper">
+            <div class="credit__info">
+              <h2 class="credit__title">Условия получения кредита</h2>
+              <h4 class="credit__minititle">Подробнее об автокредите</h4>
+            </div>
+            <ul class="credit__menu">
+              <li class="credit__item">
+                <img src="../scss/pages/main/credit-1.png" alt="" class="credit__img">
+                <h3 class="credit__subtitle">Условия получения кредита</h3>
+                <div class="credit__box">
+                  <p class="credit__text">Сумма до 7 000 000 руб.</p>
+                  <p class="credit__text">Срок кредита от 6 месяцев до 7 лет</p>
+                  <p class="credit__text">Возможность сдать свой автомобиль в Trade-In</p>
+                  <p class="credit__text">Досрочное погашение без штрафов и комиссий</p>
+                  <p class="credit__text">Без обязательного КАСКО и страхований</p>
+                </div>
+              </li>
+              <li class="credit__item">
+                <img src="../scss/pages/main/credit-2.png" alt="" class="credit__img">
+                <h3 class="credit__subtitle">Требования к получателю</h3>
+                <div class="credit__box">
+                  <p class="credit__text">Гражданство РФ</p>
+                  <p class="credit__text">Возраст от 21 года до 65 лет</p>
+                  <p class="credit__text">Паспорт и водительское удостоверение гражданина РФ</p>
+                  <p class="credit__text">Трудовой стаж на последнем месте работы не менее 6 месяцев</p>
+                  <p class="credit__text">Наличие постоянной регистрации на территории РФ</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
       <section class="ask">
         <div class="container">
           <div class="ask__wrapper">
