--- a/scss/pages/_main.scss
+++ b/scss/pages/_main.scss
@@ -482,3 +482,67 @@
   font-weight: 500;
   color: $white;
 }
+
+.credit__wrapper {
+  padding: 0 309px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  color: $header-grey;
+}
+
+.credit__info {
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+}
+
+.credit__title {
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.credit__minititle {
+  font-size: 1rem;
+  font-weight: 400;
+  color: $dark-grey;
+}
+
+.credit__menu {
+  display: flex;
+  gap: 30px;
+}
+
+.credit__item {
+  width: 540px;
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  border: 1px solid $light-grey;
+  border-radius: 4px;
+  box-shadow: 10px 10px 24px 0px #bcbcbc40;
+}
+
+.credit__img {
+  max-width: 74px;
+  height: 70px;
+}
+
+.credit__subtitle {
+  margin-top: 5px;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.credit__box {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.credit__text {
+  font-size: 1rem;
+  font-weight: 400;
+  color: $dark-grey;
+}
