--- a/views/catogory.html
+++ b/views/catogory.html
@@ -563,6 +563,22 @@
 						</div>
 					</div>
 				</section>
+
+				<section class="section2-cars">
+					<div class="section2-title__box">
+						<p class="section2__title">Вам может быть интересно:</p>
+						<p class="section2__info">Посмотреть все</p>
+					</div>
+					<div class="section2__wrapper">
+						<div class="section2__box">
+							<img
+								src="/scss/pages/category/assests/black-car.svg"
+								alt="car"
+								class="car-img"
+							/>
+						</div>
+					</div>
+				</section>
 			</main>
 		</div>
 	</body>
