--- a/scss/pages/category/_category.scss
+++ b/scss/pages/category/_category.scss
@@ -329,3 +329,15 @@
 	transition: 0.1s linear;
 	cursor: pointer;
 }
+
+.section2-title__box {
+	display: flex;
+	margin-left: 309px;
+	gap: 557px;
+	margin-top: 100px;
+}
+
+.section2__title{
+	font-weight: 700;
+	font-size: 2rem;
+}
