--- a/views/index.html
+++ b/views/index.html
@@ -555,25 +555,175 @@
             </div>
             <ul class="credit__menu">
               <li class="credit__item">
-                <img src="../scss/pages/main/credit-1.png" alt="" class="credit__img">
+                <img
+                  src="../scss/pages/main/credit-1.png"
+                  alt=""
+                  class="credit__img"
+                />
                 <h3 class="credit__subtitle">Условия получения кредита</h3>
                 <div class="credit__box">
                   <p class="credit__text">Сумма до 7 000 000 руб.</p>
                   <p class="credit__text">Срок кредита от 6 месяцев до 7 лет</p>
-                  <p class="credit__text">Возможность сдать свой автомобиль в Trade-In</p>
-                  <p class="credit__text">Досрочное погашение без штрафов и комиссий</p>
-                  <p class="credit__text">Без обязательного КАСКО и страхований</p>
+                  <p class="credit__text">
+                    Возможность сдать свой автомобиль в Trade-In
+                  </p>
+                  <p class="credit__text">
+                    Досрочное погашение без штрафов и комиссий
+                  </p>
+                  <p class="credit__text">
+                    Без обязательного КАСКО и страхований
+                  </p>
                 </div>
               </li>
               <li class="credit__item">
-                <img src="../scss/pages/main/credit-2.png" alt="" class="credit__img">
+                <img
+                  src="../scss/pages/main/credit-2.png"
+                  alt=""
+                  class="credit__img"
+                />
                 <h3 class="credit__subtitle">Требования к получателю</h3>
                 <div class="credit__box">
                   <p class="credit__text">Гражданство РФ</p>
                   <p class="credit__text">Возраст от 21 года до 65 лет</p>
-                  <p class="credit__text">Паспорт и водительское удостоверение гражданина РФ</p>
-                  <p class="credit__text">Трудовой стаж на последнем месте работы не менее 6 месяцев</p>
-                  <p class="credit__text">Наличие постоянной регистрации на территории РФ</p>
+                  <p class="credit__text">
+                    Паспорт и водительское удостоверение гражданина РФ
+                  </p>
+                  <p class="credit__text">
+                    Трудовой стаж на последнем месте работы не менее 6 месяцев
+                  </p>
+                  <p class="credit__text">
+                    Наличие постоянной регистрации на территории РФ
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="partner">
+        <div class="container">
+          <div class="partner__wrapper">
+            <h2 class="partner__title">Наши партнеры</h2>
+            <ul class="partner__menu">
+              <li class="partner__item">
+                <img
+                  src="../scss/pages/main/partner-1.png"
+                  alt=""
+                  class="partner__img partner-1"
+                />
+              </li>
+              <li class="partner__item">
+                <img
+                  src="../scss/pages/main/partner-1.png"
+                  alt=""
+                  class="partner__img partner-1"
+                />
+              </li>
+              <li class="partner__item">
+                <img
+                  src="../scss/pages/main/partner-1.png"
+                  alt=""
+                  class="partner__img partner-1"
+                />
+              </li>
+              <li class="partner__item">
+                <img
+                  src="../scss/pages/main/partner-2.png"
+                  alt=""
+                  class="partner__img partner-2"
+                />
+              </li>
+              <li class="partner__item">
+                <img
+                  src="../scss/pages/main/partner-3.png"
+                  alt=""
+                  class="partner__img partner-3"
+                />
+              </li>
+              <li class="partner__item">
+                <img
+                  src="../scss/pages/main/partner-4.png"
+                  alt=""
+                  class="partner__img partner-4"
+                />
+              </li>
+              <li class="partner__item">
+                <img
+                  src="../scss/pages/main/partner-5.png"
+                  alt=""
+                  class="partner__img partner-5"
+                />
+              </li>
+              <li class="partner__item">
+                <img
+                  src="../scss/pages/main/partner-6.png"
+                  alt=""
+                  class="partner__img partner-6"
+                />
+              </li>
+              <li class="partner__item">
+                <img
+                  src="../scss/pages/main/partner-6.png"
+                  alt=""
+                  class="partner__img partner-6"
+                />
+              </li>
+              <li class="partner__item">
+                <img
+                  src="../scss/pages/main/partner-6.png"
+                  alt=""
+                  class="partner__img partner-6"
+                />
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="news">
+        <div class="container">
+          <div class="news__wrapper">
+            <div class="news__info">
+              <h2 class="news__title">Новости</h2>
+              <h4 class="news__minititle">Посмотреть все</h4>
+            </div>
+            <ul class="news__menu">
+              <li class="news__item">
+                <img src="../scss/pages/main/new-1.png" alt="" class="news__img" />
+                <div class="news__box">
+                  <h5 class="news__data">16 марта 2023</h5>
+                  <h3 class="news__subtitle">
+                    LADA внедряет собственную программу утилизации
+                  </h3>
+                  <p class="news__subtext">
+                    Условия программы действуют при сдаче автомобиля, выходящего
+                    из эксплуатации, в зачет стоимости...
+                  </p>
+                </div>
+              </li>
+              <li class="news__item">
+                <img src="../scss/pages/main/new-2.png" alt="" class="news__img" />
+                <div class="news__box">
+                  <h5 class="news__data">16 марта 2023</h5>
+                  <h3 class="news__subtitle">
+                    Дилер BMW отчитался за 2022 год: "Поставки не прекращались”
+                  </h3>
+                  <p class="news__subtext">
+                    На протяжении прошлого года официальный дилер BMW и Mini в
+                    Беларуси реализовал 408...
+                  </p>
+                </div>
+              </li>
+              <li class="news__item">
+                <img src="../scss/pages/main/new-3.png" alt="" class="news__img" />
+                <div class="news__box">
+                  <h5 class="news__data">16 марта 2023</h5>
+                  <h3 class="news__subtitle">
+                    LADA внедряет собственную программу утилизации
+                  </h3>
+                  <p class="news__subtext">
+                    Условия программы действуют при сдаче автомобиля, выходящего
+                    из эксплуатации, в зачет стоимости...
+                  </p>
                 </div>
               </li>
             </ul>
@@ -591,7 +741,7 @@
               <div class="ask__box">Ваше имя</div>
               <div class="ask__box">+7 999 999-99-99</div>
               <div class="ask__box">Ваш email</div>
-              <button class="ask__btn">Подобрать </button>
+              <button class="ask__btn">Подобрать</button>
             </div>
             <label for="user__accept" class="click__label">
               <input
