location section added

--- a/views/index.html
+++ b/views/index.html
@@ -760,6 +760,13 @@
           </div>
         </div>
       </section>
+      <section class="location">
+        <div class="container">
+          <div class="location__wrapper">
+            <img src="../scss/pages/main/location.place.png" alt="" class="location__img">
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
