--- a/scss/pages/_main.scss
+++ b/scss/pages/_main.scss
@@ -635,3 +635,17 @@
 .news__subtext {
   margin: 5px 0 18px;
 }
+
+.location__wrapper {
+  background-image: url("/scss/pages/main/location.png");
+  background-size: cover;
+  height: 560px;
+  margin-top: 100px;
+  position: relative;
+}
+
+.location__img {
+  position: absolute;
+  top: 94px;
+  left: 773px;
+}
