contacts site added

--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,40 @@
             <a href="" class="header__link link-search">Поиск</a>
             <a href="" class="header__link link-reverse">Обратный звонок</a>
           </div>
+          <div class="header__bottom">
+            <img
+              src="/scss/pages/autocredit/assets-auto/main logogo.png"
+              alt=""
+              class="header__logo"
+            />
+            <ul class="header__bottom-menu">
+              <li class="header__bottom-list">
+                <a href="./catogory.html" class="header__bottom-first-link"
+                  >Новые автомобили</a
+                >
+              </li>
+              <li class="header__bottom-list">
+                <a href="" class="header__bottom-second-link">С пробегом</a>
+              </li>
+              <li class="header__bottom-list">
+                <a href="" class="header__bottom-third-link">Такси в кредит</a>
+              </li>
+              <li class="header__bottom-list">
+                <a href="" class="header__bottom-auto-link">Автокредит</a>
+              </li>
+              <li class="header__bottom-list">
+                <a href="" class="header__bottom-fourth-link">Услуги</a>
+              </li>
+              <li class="header__bottom-list">
+                <a href="" class="header__bottom-fifth-link">О компании</a>
+              </li>
+              <li class="header__bottom-list">
+                <a href="./contact.html" class="header__bottom-link-contact"
+                  >Контакты</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -688,7 +722,11 @@
             </div>
             <ul class="news__menu">
               <li class="news__item">
-                <img src="../scss/pages/main/new-1.png" alt="" class="news__img" />
+                <img
+                  src="../scss/pages/main/new-1.png"
+                  alt=""
+                  class="news__img"
+                />
                 <div class="news__box">
                   <h5 class="news__data">16 марта 2023</h5>
                   <h3 class="news__subtitle">
@@ -701,7 +739,11 @@
                 </div>
               </li>
               <li class="news__item">
-                <img src="../scss/pages/main/new-2.png" alt="" class="news__img" />
+                <img
+                  src="../scss/pages/main/new-2.png"
+                  alt=""
+                  class="news__img"
+                />
                 <div class="news__box">
                   <h5 class="news__data">16 марта 2023</h5>
                   <h3 class="news__subtitle">
@@ -714,7 +756,11 @@
                 </div>
               </li>
               <li class="news__item">
-                <img src="../scss/pages/main/new-3.png" alt="" class="news__img" />
+                <img
+                  src="../scss/pages/main/new-3.png"
+                  alt=""
+                  class="news__img"
+                />
                 <div class="news__box">
                   <h5 class="news__data">16 марта 2023</h5>
                   <h3 class="news__subtitle">
@@ -763,7 +809,11 @@
       <section class="location">
         <div class="container">
           <div class="location__wrapper">
-            <img src="../scss/pages/main/location.place.png" alt="" class="location__img">
+            <img
+              src="../scss/pages/main/location.place.png"
+              alt=""
+              class="location__img"
+            />
           </div>
         </div>
       </section>
