--- a/css/main.css
+++ b/css/main.css
@@ -772,4 +772,95 @@ body {
   position: absolute;
   top: 94px;
   left: 773px;
+}
+
+.contact__wrapper {
+  color: #212121;
+  padding: 30px 309px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-bottom: 70px;
+}
+
+.contact__minititle {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.contact__title {
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.contact__info {
+  display: grid;
+  grid-template-rows: 2fr 0.5fr;
+  grid-template-columns: 3fr 1fr 2fr;
+  grid-gap: 30px;
+}
+
+.contact__location {
+  grid-column: 2 span;
+}
+
+.contact__box {
+  background-color: #000000;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 46px 30px;
+  color: #FFFFFF;
+}
+
+.contact__subinfo {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.contact__subminititle {
+  color: #DC4433;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.contact__subtitle {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.contact__subtext {
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.contact__btn {
+  padding: 20px 78px;
+  color: #FFFFFF;
+  background-color: #DC4433;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 500;
+  border-style: none;
+}
+
+.contact__inner {
+  border: 1px solid #C7C7C7;
+  border-radius: 4px;
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  padding: 24px 30px;
+}
+
+.inner-2 {
+  grid-column: 2 span;
+}
+
+.contact__text {
+  font-size: 24px;
+  font-weight: 600;
 }/*# sourceMappingURL=main.css.map */
