--- a/scss/pages/_pages.scss
+++ b/scss/pages/_pages.scss
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-@import './category/category';
 @import './main';
-=======
-@import "./main";
-@import "./contacts/contacts";
->>>>>>> origin/main
+@import './contacts/contacts';
+@import './category/category';
