--- a/css/main.css
+++ b/css/main.css
@@ -85,28 +85,13 @@ button {
 }
 
 .link-clock {
-<<<<<<< HEAD
-  width: 241px;
-  color: red;
-=======
   min-width: 241px;
->>>>>>> origin/main
 }
 
 .link-clock::before {
   content: "";
   width: 14px;
   height: 14px;
-<<<<<<< HEAD
-  background-image: url("../pages/main/clock.png");
-  background-size: cover;
-  background-color: red;
-  position: absolute;
-}
-
-.link-tel {
-  width: 290px;
-=======
   background-image: url("/scss/pages/main/clock.png");
   background-size: cover;
   position: absolute;
@@ -115,373 +100,22 @@ button {
 
 .link-tel {
   min-width: 320px;
->>>>>>> origin/main
 }
 
 .link-tel::before {
   content: "";
   width: 14px;
   height: 14px;
-<<<<<<< HEAD
-  background-image: url("../pages/main/tel.png");
-  background-size: contain;
-=======
   background-image: url("/scss/pages/main/tel.png");
   background-size: cover;
   position: absolute;
   left: -19px;
->>>>>>> origin/main
 }
 
 .link-search::before {
   content: "";
   width: 14px;
   height: 14px;
-<<<<<<< HEAD
-  background-image: url("../pages/main/search.png");
-  background-size: cover;
-}
-
-.category__menu {
-  display: flex;
-  gap: 5px;
-  margin-left: 309px;
-}
-
-.category__list {
-  font-size: 14px;
-  line-height: 16.41px;
-  color: #424242;
-}
-
-.dark-one {
-  font-weight: 500;
-  color: #000000;
-}
-
-.category__title {
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 37.5px;
-  color: #212121;
-  margin: 30px 0 40px 309px;
-}
-
-.category__nav2 {
-  display: flex;
-  gap: 395px;
-}
-
-.category__selection {
-  margin-left: 309px;
-  display: flex;
-  gap: 30px;
-}
-
-.selection__btn {
-  width: 160px;
-  height: 40px;
-  border: 1px solid #C7C7C7;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 18.75px;
-  color: #C7C7C7;
-  background-color: white;
-  cursor: pointer;
-  text-align: left;
-  padding-left: 10px;
-  border-radius: 4px;
-  position: relative;
-}
-
-.down-arrow {
-  position: absolute;
-  text-align: center;
-  width: 24px;
-  height: 24px;
-  top: 10px;
-  right: 10px;
-}
-
-.selection__btn-red {
-  background-color: #DC4433;
-  color: white;
-  text-align: center;
-  border-color: transparent;
-}
-
-.search-first {
-  margin-left: 1069px;
-}
-
-.search__down-arrow {
-  text-align: center;
-}
-
-.category__search {
-  display: flex;
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
-
-.search-text {
-  margin-left: 5px;
-  font-size: 14px;
-  line-height: 16.41px;
-  color: #424242;
-}
-
-.first-text {
-  margin-right: 42px;
-}
-
-.search-type__wrapper {
-  display: flex;
-  margin-left: 309px;
-}
-
-.search-type__sort {
-  width: 255px;
-  height: 30px;
-  border: 1px solid #C7C7C7;
-  background-color: white;
-  border-radius: 6px;
-  font-size: 14px;
-  line-height: 16.41px;
-  color: #000000;
-  transition: 0.2s linear;
-  cursor: pointer;
-  text-align: left;
-  padding-left: 15px;
-}
-
-.sort1 {
-  margin-right: 315px;
-  position: relative;
-}
-.sort1::before {
-  content: "";
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  background-image: url(/scss/pages/category/assests/down-arrow2.svg);
-  left: 210px;
-  background-repeat: no-repeat;
-}
-
-.sort2 {
-  margin-right: 30px;
-  position: relative;
-}
-.sort2::before {
-  content: "";
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  background-image: url(/scss/pages/category/assests/second-btn-things.svg);
-  left: 200px;
-  background-repeat: no-repeat;
-}
-.sort2::after {
-  content: "";
-  width: 24px;
-  height: 24px;
-  position: absolute;
-  background-image: url(/scss/pages/category/assests/second-btn-things2.svg);
-  left: 224px;
-  background-repeat: no-repeat;
-}
-
-.search-type__sort:hover {
-  transform: scale(1.1);
-}
-
-.sort3-number {
-  margin-left: 91px;
-  color: #C7C7C7;
-}
-
-.thirty-six {
-  margin-left: 10px;
-}
-
-.sort3-number__black {
-  color: #000000;
-  margin-right: 10px;
-}
-
-.category__hero-item__box {
-  width: 255px;
-  height: 434px;
-  border-radius: 4px;
-  border: 1px solid #C7C7C7;
-  background-color: white;
-}
-
-.category__hero-item__title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 23.44px;
-  color: #000000;
-  margin-left: 10px;
-  margin-bottom: 5px;
-}
-
-.category__hero-item__comfort {
-  font-size: 18px;
-  line-height: 21.09px;
-  color: #000000;
-  margin-left: 10px;
-  margin-bottom: 10px;
-}
-
-.category__hero-item__credit {
-  font-size: 12px;
-  line-height: 14.06px;
-  color: #424242;
-  margin-left: 10px;
-  margin-bottom: 10px;
-}
-
-.category__hero-item__inner-box {
-  display: flex;
-  gap: 5px;
-  flex-wrap: wrap;
-  width: 235px;
-  margin-left: 10px;
-  margin-bottom: 15px;
-}
-
-.inner-box__info {
-  width: 55px;
-  height: 18px;
-  border: 1px solid #C7C7C7;
-  border-radius: 4px;
-  font-size: 10px;
-  line-height: 11.72px;
-  color: #424242;
-  text-align: center;
-  place-content: center;
-}
-
-.inner-box__info2 {
-  width: 235px;
-}
-
-.category__hero-item__price-info {
-  font-size: 13px;
-  line-height: 15.23px;
-  color: #424242;
-  margin-left: 10px;
-}
-
-.category__hero-item__price-at__numbers {
-  font-weight: 500;
-  font-size: 13px;
-  line-height: 15.23px;
-  color: #000000;
-  margin-left: 10px;
-}
-
-.item-price__info2 {
-  margin-bottom: 10px;
-}
-
-.item-price__info3 {
-  margin-bottom: 25px;
-}
-
-.category__hero-item__car-link {
-  margin-left: 10px;
-}
-
-.category__hero-item__info-btn {
-  width: 235px;
-  height: 40px;
-  background-color: #DC4433;
-  border-radius: 4px;
-  border-color: transparent;
-  color: white;
-  line-height: 18.75px;
-  transition: 0.2s linear;
-}
-
-.category__hero-item__info-btn:hover {
-  transform: scale(1.1);
-}
-
-.category__hero-wrapper {
-  margin-left: 309px;
-  margin-top: 20px;
-  width: 1110px;
-  display: flex;
-  gap: 30px;
-  flex-wrap: wrap;
-}
-
-.more-cars {
-  margin: 50px 0 40px 704px;
-  width: 320px;
-  height: 60px;
-  border-radius: 4px;
-  border-color: transparent;
-  background-color: #000000;
-  color: white;
-  font-weight: 500;
-  line-height: 18.75px;
-  font-size: 1rem;
-}
-
-.more-numbers {
-  width: 434px;
-  height: 18px;
-  margin-left: 667px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.more-number__item {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16.41px;
-  color: #424242;
-  cursor: pointer;
-  transition: 0.1s linear;
-}
-
-.more-number__item:hover {
-  transform: scale(1.2);
-}
-
-.left-arrow:hover {
-  transform: scale(1.2);
-}
-
-.right-arrow:hover {
-  transform: scale(1.2);
-}
-
-.right-arrow {
-  transition: 0.1s linear;
-  cursor: pointer;
-}
-
-.left-arrow {
-  transition: 0.1s linear;
-  cursor: pointer;
-}
-
-.section2-title__box {
-  display: flex;
-  margin-left: 309px;
-  gap: 557px;
-  margin-top: 100px;
-}
-
-.section2__title {
-  font-weight: 700;
-  font-size: 2rem;
-=======
   background-image: url("/scss/pages/main/search.png");
   background-size: cover;
   left: -19px;
@@ -489,7 +123,6 @@ button {
 
 .link-reverse {
   min-width: 118px;
->>>>>>> origin/main
 }
 
 .hero__wrapper {
@@ -575,10 +208,6 @@ button {
   padding: 40px 309px;
   width: 1728px;
   height: 240px;
-<<<<<<< HEAD
-  background-color: black;
-=======
->>>>>>> origin/main
   color: #FFFFFF;
 }
 
@@ -631,33 +260,24 @@ button {
   content: "";
   width: 6px;
   height: 4px;
-<<<<<<< HEAD
-  background-image: url("./main/active.png");
-=======
   background-image: url("/scss/pages/main/active.png");
->>>>>>> origin/main
   background-size: cover;
   position: absolute;
   top: calc(50% - 2px);
   right: 25px;
 }
 
-<<<<<<< HEAD
-=======
 .info-double {
   display: flex;
   gap: 61px;
 }
 
->>>>>>> origin/main
 .info-double::before {
   content: "";
   width: 1px;
   height: 60px;
   position: absolute;
   background-color: #C7C7C7;
-<<<<<<< HEAD
-=======
   left: 127px;
   top: calc(50% - 30px);
 }
@@ -1247,5 +867,603 @@ button {
 .contact__text {
   font-size: 24px;
   font-weight: 600;
->>>>>>> origin/main
+}
+
+.category__menu {
+  display: flex;
+  gap: 5px;
+  margin-left: 309px;
+}
+
+.category__list {
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #424242;
+}
+
+.dark-one {
+  font-weight: 500;
+  color: #000000;
+}
+
+.category__title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 37.5px;
+  color: #212121;
+  margin: 30px 0 40px 309px;
+}
+
+.category__nav2 {
+  display: flex;
+  gap: 395px;
+}
+
+.category__selection {
+  margin-left: 309px;
+  display: flex;
+  gap: 30px;
+}
+
+.selection__btn {
+  width: 160px;
+  height: 40px;
+  border: 1px solid #C7C7C7;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18.75px;
+  color: #C7C7C7;
+  background-color: white;
+  cursor: pointer;
+  text-align: left;
+  padding-left: 10px;
+  border-radius: 4px;
+  position: relative;
+}
+
+.down-arrow {
+  position: absolute;
+  text-align: center;
+  width: 24px;
+  height: 24px;
+  top: 10px;
+  right: 10px;
+}
+
+.selection__btn-red {
+  background-color: #DC4433;
+  color: white;
+  text-align: center;
+  border-color: transparent;
+}
+
+.search-first {
+  margin-left: 1069px;
+}
+
+.search__down-arrow {
+  text-align: center;
+}
+
+.category__search {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.search-text {
+  margin-left: 5px;
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #424242;
+}
+
+.first-text {
+  margin-right: 42px;
+}
+
+.search-type__wrapper {
+  display: flex;
+  margin-left: 309px;
+}
+
+.search-type__sort {
+  width: 255px;
+  height: 30px;
+  border: 1px solid #C7C7C7;
+  background-color: white;
+  border-radius: 6px;
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #000000;
+  transition: 0.2s linear;
+  cursor: pointer;
+  text-align: left;
+  padding-left: 15px;
+}
+
+.sort1 {
+  margin-right: 315px;
+  position: relative;
+}
+.sort1::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  background-image: url(/scss/pages/category/assests/down-arrow2.svg);
+  left: 210px;
+  background-repeat: no-repeat;
+}
+
+.sort2 {
+  margin-right: 30px;
+  position: relative;
+}
+.sort2::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  background-image: url(/scss/pages/category/assests/second-btn-things.svg);
+  left: 200px;
+  background-repeat: no-repeat;
+}
+.sort2::after {
+  content: "";
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  background-image: url(/scss/pages/category/assests/second-btn-things2.svg);
+  left: 224px;
+  background-repeat: no-repeat;
+}
+
+.search-type__sort:hover {
+  transform: scale(1.1);
+}
+
+.sort3-number {
+  margin-left: 91px;
+  color: #C7C7C7;
+}
+
+.thirty-six {
+  margin-left: 10px;
+}
+
+.sort3-number__black {
+  color: #000000;
+  margin-right: 10px;
+}
+
+.category__hero-item__box {
+  width: 255px;
+  height: 434px;
+  border-radius: 4px;
+  border: 1px solid #C7C7C7;
+  background-color: white;
+}
+
+.category__hero-item__title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23.44px;
+  color: #000000;
+  margin-left: 10px;
+  margin-bottom: 5px;
+}
+
+.category__hero-item__comfort {
+  font-size: 18px;
+  line-height: 21.09px;
+  color: #000000;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.category__hero-item__credit {
+  font-size: 12px;
+  line-height: 14.06px;
+  color: #424242;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.category__hero-item__inner-box {
+  display: flex;
+  gap: 5px;
+  flex-wrap: wrap;
+  width: 235px;
+  margin-left: 10px;
+  margin-bottom: 15px;
+}
+
+.inner-box__info {
+  width: 55px;
+  height: 18px;
+  border: 1px solid #C7C7C7;
+  border-radius: 4px;
+  font-size: 10px;
+  line-height: 11.72px;
+  color: #424242;
+  text-align: center;
+  place-content: center;
+}
+
+.inner-box__info2 {
+  width: 235px;
+}
+
+.category__hero-item__price-info {
+  font-size: 13px;
+  line-height: 15.23px;
+  color: #424242;
+  margin-left: 10px;
+}
+
+.category__hero-item__price-at__numbers {
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 15.23px;
+  color: #000000;
+  margin-left: 10px;
+}
+
+.item-price__info2 {
+  margin-bottom: 10px;
+}
+
+.item-price__info3 {
+  margin-bottom: 25px;
+}
+
+.category__hero-item__car-link {
+  margin-left: 10px;
+}
+
+.category__hero-item__info-btn {
+  width: 235px;
+  height: 40px;
+  background-color: #DC4433;
+  border-radius: 4px;
+  border-color: transparent;
+  color: white;
+  line-height: 18.75px;
+  transition: 0.2s linear;
+}
+
+.category__hero-item__info-btn:hover {
+  transform: scale(1.1);
+}
+
+.category__hero-wrapper {
+  margin-left: 309px;
+  margin-top: 20px;
+  width: 1110px;
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.more-cars {
+  margin: 50px 0 40px 704px;
+  width: 320px;
+  height: 60px;
+  border-radius: 4px;
+  border-color: transparent;
+  background-color: #000000;
+  color: white;
+  font-weight: 500;
+  line-height: 18.75px;
+  font-size: 1rem;
+}
+
+.more-numbers {
+  width: 434px;
+  height: 18px;
+  margin-left: 667px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.more-number__item {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #424242;
+  cursor: pointer;
+  transition: 0.1s linear;
+}
+
+.more-number__item:hover {
+  transform: scale(1.2);
+}
+
+.left-arrow:hover {
+  transform: scale(1.2);
+}
+
+.right-arrow:hover {
+  transform: scale(1.2);
+}
+
+.right-arrow {
+  transition: 0.1s linear;
+  cursor: pointer;
+}
+
+.left-arrow {
+  transition: 0.1s linear;
+  cursor: pointer;
+}
+
+.section2-title__box {
+  display: flex;
+  margin-left: 309px;
+  gap: 557px;
+  margin-top: 100px;
+}
+
+.section2__title {
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.question-wrapper {
+  width: 1110px;
+  height: 293px;
+  background-image: url(/scss/pages/category/assests/question-bc.svg);
+  background-color: black;
+  margin-left: 309px;
+  margin-bottom: 100px;
+  padding-left: 40px;
+  position: relative;
+}
+
+.question-title {
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 37.5px;
+  color: white;
+  padding-top: 40px;
+  padding-bottom: 15px;
+}
+
+.question-subtitle {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21.09px;
+  color: white;
+  margin-bottom: 40px;
+}
+
+.question-form > input {
+  width: 245px;
+  height: 60px;
+  padding: 20.5px 0 20.5px 25px;
+  border-radius: 4px;
+  border-color: transparent;
+}
+.question-form > input:nth-last-child(2) {
+  width: 15px;
+  height: 15px;
+  border: 1px solid transparent;
+  background-color: white;
+  cursor: pointer;
+  position: absolute;
+  top: 229px;
+  left: 570px;
+}
+
+.question__user-info-wrapper {
+  display: flex;
+  width: 1040px;
+  gap: 20px;
+}
+
+.question-accept__info {
+  font-size: 10px;
+  line-height: 11.72px;
+  color: white;
+  position: absolute;
+  top: 229px;
+  left: 594px;
+}
+
+.question-accept {
+  background-color: #DC4433;
+  width: 245px;
+  height: 60px;
+  border-radius: 4px;
+  color: white;
+  font-weight: 500;
+  line-height: 18.75px;
+  transition: 0.2s linear;
+  border-color: transparent;
+}
+.question-accept:hover {
+  transform: scale(1.1);
+}
+
+.news-wrapper {
+  width: 1110px;
+  margin-left: 309px;
+  margin-bottom: 100px;
+}
+
+.news-title {
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 37.5px;
+  color: #000000;
+}
+
+.news-see__all {
+  line-height: 18.75px;
+  color: #424242;
+}
+
+.news-small-box {
+  display: flex;
+  gap: 800px;
+  margin-bottom: 40px;
+}
+
+.news-inner__wrapper {
+  display: flex;
+  gap: 30px;
+}
+
+.news-box {
+  width: 350px;
+  height: 380px;
+  border: 1px solid #C7C7C7;
+  border-radius: 4px;
+}
+
+.new-date {
+  font-size: 0.75rem;
+  line-height: 14.06px;
+  color: #424242;
+  padding-left: 15px;
+  padding-top: 15px;
+  padding-bottom: 10px;
+}
+
+.new-title {
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 23.44px;
+  color: #000000;
+  padding-left: 15px;
+  padding-bottom: 15px;
+}
+
+.new-subtitle {
+  font-size: 1rem;
+  line-height: 18.75px;
+  color: #424242;
+  padding-left: 15px;
+}
+
+.map {
+  position: relative;
+}
+
+.x-cross {
+  color: #C7C7C7;
+  position: absolute;
+  right: 5px;
+  top: 10px;
+  font-size: 1.5rem;
+}
+
+.map__wrapper {
+  width: 400px;
+  height: 320px;
+  background-color: white;
+  position: absolute;
+  top: 94px;
+  left: 773px;
+  padding-left: 25px;
+  padding-top: 35px;
+}
+
+.map-subtitle {
+  margin-bottom: 5px;
+  margin-top: 5px;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 14.95px;
+  color: #424242;
+}
+
+.map-title {
+  font-size: 18px;
+  line-height: 21.09px;
+  color: #000000;
+  font-weight: 500;
+}
+
+.map-stars {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.location-img {
+  color: #C7C7C7;
+}
+
+.map-info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: relative;
+}
+
+.grey-one {
+  position: absolute;
+  color: #C7C7C7;
+  left: 170px;
+}
+
+.grey-one > img {
+  color: #C7C7C7;
+  position: absolute;
+  top: -2px;
+}
+
+.map-open {
+  margin-left: 70px;
+}
+
+.choosen-one {
+  font-size: 13px;
+  line-height: 14.95px;
+  font-weight: 500;
+  color: #000000;
+}
+
+.map-place-info {
+  font-size: 14px;
+  line-height: 16.41px;
+  color: #000000;
+}
+
+.blue-one {
+  color: #356bf6;
+  font-size: 13px;
+  line-height: 14.95px;
+  font-weight: 500;
+}
+
+.map-location {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 13px;
+}
+
+.map-distance {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.map-distance-way {
+  display: flex;
+}
+
+.way-img {
+  margin-right: 10px;
+}
+
+.distance-name {
+  margin-right: 5px;
+}
+
+.distance-number {
+  color: blue;
 }/*# sourceMappingURL=main.css.map */
