--- a/views/catogory.html
+++ b/views/catogory.html
@@ -564,18 +564,433 @@
 					</div>
 				</section>
 
-				<section class="section2-cars">
-					<div class="section2-title__box">
-						<p class="section2__title">Вам может быть интересно:</p>
-						<p class="section2__info">Посмотреть все</p>
+				<section class="offer">
+					<div class="container">
+						<div class="offer__wrapper">
+							<div class="offer__info">
+								<h2 class="offer__title">Специальные предложения</h2>
+								<h4 class="offer__minititle">Посмотреть все</h4>
+							</div>
+							<ul class="offer__menu">
+								<li class="offer__item">
+									<img
+										src="../scss/pages/main/offer-1.png"
+										alt=""
+										class="offer__img"
+									/>
+									<div class="offer__subinfo">
+										<h3 class="offer__subtitle">HYUNDAI Elantra</h3>
+										<h4 class="offer__subminititle">Comfort</h4>
+										<ul class="offer__submenu">
+											<li class="offer__subitem">
+												<span class="grey">Год выпуска:</span> 2023
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">Тип двигателя:</span> Бензин
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">КПП</span> Автомат
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">Объем двиг.(см³):</span> 1893
+											</li>
+										</ul>
+										<h3 class="offer__price">
+											<span class="grey">Цена от:</span> 10 000 000 руб.
+										</h3>
+										<button class="offer__subbtn">Купить</button>
+									</div>
+								</li>
+								<li class="offer__item">
+									<img
+										src="../scss/pages/main/offer-1.png"
+										alt=""
+										class="offer__img"
+									/>
+									<div class="offer__subinfo">
+										<h3 class="offer__subtitle">HYUNDAI Elantra</h3>
+										<h4 class="offer__subminititle">Comfort</h4>
+										<ul class="offer__submenu">
+											<li class="offer__subitem">
+												<span class="grey">Год выпуска:</span> 2023
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">Тип двигателя:</span> Бензин
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">КПП</span> Автомат
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">Объем двиг.(см³):</span> 1893
+											</li>
+										</ul>
+										<h3 class="offer__price">
+											<span class="grey">Цена от:</span> 10 000 000 руб.
+										</h3>
+										<button class="offer__subbtn">Купить</button>
+									</div>
+								</li>
+								<li class="offer__item">
+									<img
+										src="../scss/pages/main/offer-2.png"
+										alt=""
+										class="offer__img"
+									/>
+									<div class="offer__subinfo">
+										<h3 class="offer__subtitle">KIA Carnival</h3>
+										<h4 class="offer__subminititle">Comfort</h4>
+										<ul class="offer__submenu">
+											<li class="offer__subitem">
+												<span class="grey">Год выпуска:</span> 2023
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">Тип двигателя:</span> Бензин
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">КПП</span> Вариатор
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">Объем двиг.(см³):</span> 1893
+											</li>
+										</ul>
+										<h3 class="offer__price">
+											<span class="grey">Цена от:</span> 2 000 000 руб.
+										</h3>
+										<button class="offer__subbtn">Купить</button>
+									</div>
+								</li>
+								<li class="offer__item">
+									<img
+										src="../scss/pages/main/offer-3.png"
+										alt=""
+										class="offer__img"
+									/>
+									<div class="offer__subinfo">
+										<h3 class="offer__subtitle">MITSUBISHI Outlander</h3>
+										<h4 class="offer__subminititle">Comfort</h4>
+										<ul class="offer__submenu">
+											<li class="offer__subitem">
+												<span class="grey">Год выпуска:</span> 2023
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">Тип двигателя:</span> Бензин
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">КПП</span> Автомат
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">Объем двиг.(см³):</span> 1893
+											</li>
+										</ul>
+										<h3 class="offer__price">
+											<span class="grey">Цена от:</span> 1 400 000 руб.
+										</h3>
+										<button class="offer__subbtn">Купить</button>
+									</div>
+								</li>
+								<li class="offer__item">
+									<img
+										src="../scss/pages/main/offer-3.png"
+										alt=""
+										class="offer__img"
+									/>
+									<div class="offer__subinfo">
+										<h3 class="offer__subtitle">MITSUBISHI Outlander</h3>
+										<h4 class="offer__subminititle">Comfort</h4>
+										<ul class="offer__submenu">
+											<li class="offer__subitem">
+												<span class="grey">Год выпуска:</span> 2023
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">Тип двигателя:</span> Бензин
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">КПП</span> Автомат
+											</li>
+											<li class="offer__subitem">
+												<span class="grey">Объем двиг.(см³):</span> 1893
+											</li>
+										</ul>
+										<h3 class="offer__price">
+											<span class="grey">Цена от:</span> 1 400 000 руб.
+										</h3>
+										<button class="offer__subbtn">Купить</button>
+									</div>
+								</li>
+							</ul>
+						</div>
 					</div>
-					<div class="section2__wrapper">
-						<div class="section2__box">
-							<img
-								src="/scss/pages/category/assests/black-car.svg"
-								alt="car"
-								class="car-img"
-							/>
+				</section>
+				<section>
+					<div class="container">
+						<div class="question-wrapper">
+							<p class="question-title">Остались вопросы?</p>
+							<p class="question-subtitle">
+								Мы свяжемся с Вами в течении 10 минут и ответим на них.
+							</p>
+							<div class="question__user-info-wrapper">
+								<form
+									action="https://echo.htmlacademy.ru"
+									method="post"
+									class="question-form"
+								>
+									<label for="name"></label>
+									<input
+										placeholder="Ваше имя"
+										type="text"
+										name="name"
+										id="name"
+										required
+									/>
+									<label for="phone-number"></label>
+									<input
+										placeholder="+7 999 999-99-99"
+										type="number"
+										name="number"
+										id="phone-number"
+										required
+									/>
+									<label for="user-email"></label>
+									<input
+										placeholder="Ваш email"
+										type="email"
+										name="email"
+										id="user-email"
+										required
+									/>
+									<button type="submit" class="question-accept">
+										Подобрать
+									</button>
+									<label for="accept"></label>
+									<input
+										type="checkbox"
+										name="checkbox"
+										id="accept"
+										class="question-checkbox"
+									/>
+									<p class="question-accept__info">
+										Я соглашаюсь с условиями и даю свое согласие на обработку
+										<br />
+										и использование моих персональных данных
+									</p>
+								</form>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section>
+					<div class="container">
+						<div class="news-wrapper">
+							<div class="news-small-box">
+								<p class="news-title">Новости KIA</p>
+								<a class="news-see__all" href="#">Посмотреть все</a>
+							</div>
+							<div class="news-inner__wrapper">
+								<div class="news-box">
+									<img
+										src="/scss/pages/category/assests/first-news.svg"
+										alt="jam"
+										class="new-box__img"
+									/>
+									<p class="new-date">16 марта 2023</p>
+									<p class="new-title">
+										LADA внедряет собственную <br />
+										программу утилизации
+									</p>
+									<p class="new-subtitle">
+										Условия программы действуют при сдаче <br />
+										автомобиля, выходящего из <br />
+										эксплуатации, в зачет стоимости...
+									</p>
+								</div>
+								<div class="news-box">
+									<img
+										src="/scss/pages/category/assests/second-new.svg"
+										alt="jam"
+										class="new-box__img"
+									/>
+									<p class="new-date">16 марта 2023</p>
+									<p class="new-title">
+										Дилер BMW отчитался за 2022 <br />
+										год: "Поставки не прекращались”
+									</p>
+									<p class="new-subtitle">
+										На протяжении прошлого года <br />
+										официальный дилер BMW и Mini в <br />
+										Беларуси реализовал 408...
+									</p>
+								</div>
+								<div class="news-box">
+									<img
+										src="/scss/pages/category/assests/third-new.svg"
+										alt="jam"
+										class="new-box__img"
+									/>
+									<p class="new-date">16 марта 2023</p>
+									<p class="new-title">
+										LADA внедряет собственную <br />
+										программу утилизации
+									</p>
+									<p class="new-subtitle">
+										Условия программы действуют при сдаче <br />
+										автомобиля, выходящего из <br />
+										эксплуатации, в зачет стоимости...
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="map">
+					<div class="container">
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2174.769607869175!2d37.43235591331973!3d55.756546994702724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5492ac717086d%3A0xf30772eb7c331e71!2zS3J5bGF0c2theWEgVWxpdHNhLCAyINGB0YLRgNC-0LXQvdC40LUgNCwgTW9za3ZhLCBSdXNzaWEsIDEyMTU1Mg!5e0!3m2!1sen!2s!4v1735844066460!5m2!1sen!2s"
+							width="1728"
+							height="560"
+							style="border:0;"
+							allowfullscreen=""
+							loading="lazy"
+							referrerpolicy="no-referrer-when-downgrade"
+						></iframe>
+						<div class="map__wrapper">
+							<a class="x-cross" href="#">X</a>
+							<p class="map-title">АвтоДинамика</p>
+							<p class="map-subtitle">
+								Автосалонпродажа автомобилей <br> с пробегом
+							</p>
+							<div class="map-stars">
+								<img
+									width="24"
+									src="/scss/pages/category/assests/star.png"
+									alt="star"
+									class="stars-img"
+								/>
+								<img
+									width="24"
+									src="/scss/pages/category/assests/star.png"
+									alt="star"
+									class="stars-img"
+								/>
+								<img
+									width="24"
+									src="/scss/pages/category/assests/star.png"
+									alt="star"
+									class="stars-img"
+								/>
+								<img
+									width="24"
+									src="/scss/pages/category/assests/star.png"
+									alt="star"
+									class="stars-img"
+								/>
+								<img
+									width="24"
+									src="/scss/pages/category/assests/star.png"
+									alt="star"
+									class="stars-img"
+								/>
+								<p class="stars-rate">5,0</p>
+								<p class="map-open">Открыто до 19:00</p>
+								<img
+									height="25"
+									src="/scss/pages/category/assests/down-arrow.svg"
+									alt=""
+									class="map-down"
+								/>
+							</div>
+							<ul class="map-location">
+								<li class="map-info">
+									<img
+										width="24"
+										src="/scss/pages/category/assests/location.png"
+										alt="location"
+										class="location-img"
+									/>
+									<p class="map-place-info ">улица Крылатская, 2, корп. 4</p>
+								</li>
+								<li class="map-info">
+									<img
+										width="24"
+										src="/scss/pages/category/assests/phone-call.png"
+										alt="location"
+										class="location-img"
+									/>
+									<p class="map-place-info">
+										8 (495) 374-94-88
+										<span class="grey-one"
+											>4
+											<img
+												width="24"
+												src="/scss/pages/category/assests/down-arrow.svg"
+												alt=""
+											/>
+										</span>
+									</p>
+								</li>
+								<li class="map-info">
+									<img
+										width="24"
+										src="/scss/pages/category/assests/location.png"
+										alt="location"
+										class="location-img"
+									/>
+									<a href="https//:auto-dinamika.com" class="map-place-info blue-one"
+										>auto-dinamika.com</a
+									>
+								</li>
+							</ul>
+							<ul class="map-distance">
+								<li class="map-distance-way">
+									<img
+										width="20"
+										src="/scss/pages/category/assests/metro.png"
+										alt=""
+										class="way-img"
+									/>
+									<p class="distance-name">Молодёжная</p>
+									<img
+										width="20"
+										src="/scss/pages/category/assests/man.png"
+										alt=""
+										class="distance-img"
+									/>
+									<p class="distance-number">2,7 км</p>
+								</li>
+								<li class="map-distance-way">
+									<img
+										width="20"
+										src="/scss/pages/category/assests/metro.png"
+										alt=""
+										class="way-img"
+									/>
+									<p class="distance-name">Терехово</p>
+									<img
+										width="20"
+										src="/scss/pages/category/assests/man.png"
+										alt=""
+										class="distance-img"
+									/>
+									<p class="distance-number">2,92 км</p>
+								</li>
+								<li class="map-distance-way">
+									<img
+										width="20"
+										src="/scss/pages/category/assests/metro.png"
+										alt=""
+										class="way-img"
+									/>
+									<p class="distance-name">Крылатское</p>
+									<img
+										width="20"
+										src="/scss/pages/category/assests/man.png"
+										alt=""
+										class="distance-img"
+									/>
+									<p class="distance-number">3,1 км</p>
+								</li>
+								
+							</ul>
 						</div>
 					</div>
 				</section>
