--- a/views/news.html
+++ b/views/news.html
@@ -58,6 +58,27 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="orgnews">
+        <div class="container">
+          <div class="orgnews__wrapper">
+            <h4 class="contact__minititle">
+              <span class="grey">Главная > </span> Новости
+            </h4>
+            <div class="orgnews__info">
+              <h2 class="orgnews__title">Новости</h2>
+              <div class="orgnews__inner">
+                <div class="orgnews__border">
+                  <p class="orgnews__text">
+                    <span class="text-active">12</span> 24 48
+                  </p>
+                </div>
+                <div class="orgnews__border"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
