--- a/css/main.css
+++ b/css/main.css
@@ -46,24 +46,24 @@ body {
   font-family: "Roboto";
 }
 
+img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .container {
   width: 1728px;
   margin: 0 auto;
 }
 
-@media only screen and (max-width: 1258px) {
-  .container {
-    width: 1258px;
-  }
-}
 @media only screen and (max-width: 834px) {
   .container {
-    width: 834px;
+    padding: 0 -168px;
   }
 }
 @media only screen and (max-width: 360px) {
   .container {
-    width: 360px;
+    padding: 0 -279px;
   }
 }
 .header__top {
@@ -121,10 +121,15 @@ body {
   min-width: 118px;
 }
 
+@media only screen and (max-width: 1258px) {
+  .header__top {
+    padding: 17px 165px;
+  }
+}
 .hero__wrapper {
   padding: 80px 309px;
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   position: relative;
 }
 
@@ -132,6 +137,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 445px;
+  margin-top: 54px;
 }
 
 .hero__minititle-1 {
@@ -177,8 +184,6 @@ body {
 .hero__img {
   width: 875px;
   height: 368px;
-  margin-top: -368px;
-  margin-left: 651px;
 }
 
 .hero__menu {
@@ -202,8 +207,6 @@ body {
   background-image: url("/scss/pages/main/blacj.jpg");
   background-size: cover;
   padding: 40px 309px;
-  width: 1728px;
-  height: 240px;
   color: #FFFFFF;
 }
 
@@ -422,6 +425,7 @@ body {
 .offer__wrapper {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   gap: 40px;
   padding: 100px 0;
   justify-content: center;
@@ -675,6 +679,7 @@ body {
   padding: 50px 309px;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   gap: 40px;
   background-color: #fafafa;
   justify-content: center;
@@ -774,6 +779,601 @@ body {
   left: 773px;
 }
 
+@media only screen and (max-width: 1258px) {
+  .container {
+    width: 1258px;
+    margin: 0 auto;
+  }
+  .hero__wrapper {
+    padding: 80px 159px;
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+  .hero__info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 445px;
+    height: 216px;
+  }
+  .hero__minititle-1 {
+    font-weight: 600;
+    font-size: 28px;
+  }
+  .hero__title {
+    font-weight: 600;
+    font-size: 42px;
+    width: 445px;
+  }
+  .hero__minititle-2 {
+    font-weight: 700;
+    font-size: 28px;
+    color: #DC4433;
+  }
+  .hero__box {
+    display: flex;
+    gap: 2px;
+    margin-top: 15px;
+  }
+  .hero__btn {
+    padding: 10px;
+    background-color: #000000;
+    color: #FFFFFF;
+    border-style: none;
+    font-size: 12px;
+  }
+  .red {
+    color: #DC4433;
+    font-weight: 500;
+  }
+  .hero__text {
+    font-size: 12px;
+    color: #212121;
+  }
+  .hero__img {
+    width: 608px;
+    height: 256px;
+    margin-top: 60px;
+    margin-left: -20px;
+  }
+  .hero__menu {
+    display: flex;
+    gap: 20px;
+    top: 590px;
+    left: -250px;
+    position: absolute;
+  }
+  .hero__item {
+    background-color: #C7C7C7;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+  }
+  .item-active {
+    background-color: #212121;
+  }
+  .try__wrapper {
+    background-image: url("/scss/pages/main/blacj.jpg");
+    background-size: cover;
+    padding: 40px 159px;
+    color: #FFFFFF;
+    width: 1258px;
+    height: 230px;
+  }
+  .try__top {
+    display: flex;
+    gap: 124px;
+    margin-bottom: 50px;
+  }
+  .try__title {
+    font-weight: 600;
+    font-size: 31px;
+  }
+  .try__box {
+    display: flex;
+    gap: 14px;
+  }
+  .try__btn {
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    background-color: transparent;
+    color: #FFFFFF;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 10px 14px;
+    width: 144px;
+    height: 40px;
+  }
+  .btn-active {
+    background-color: #FFFFFF;
+    color: #DC4433;
+  }
+  .try__bottom {
+    display: flex;
+    gap: 20px;
+  }
+  .try__info {
+    padding: 20px 25px;
+    width: 255px;
+    height: 60px;
+    background-color: #FFFFFF;
+    color: #C7C7C7;
+    border-radius: 4px;
+    position: relative;
+  }
+  .info-active::after {
+    content: "";
+    width: 6px;
+    height: 4px;
+    background-image: url("/scss/pages/main/active.png");
+    background-size: cover;
+    position: absolute;
+    top: calc(50% - 2px);
+    right: 25px;
+  }
+  .info-double {
+    display: flex;
+    gap: 61px;
+  }
+  .info-double::before {
+    content: "";
+    width: 1px;
+    height: 60px;
+    position: absolute;
+    background-color: #C7C7C7;
+    left: calc(50% - 0.5px);
+    top: calc(50% - 30px);
+  }
+  .try__btn-original {
+    padding: 20px 86px;
+    border-radius: 4px;
+    background-color: #DC4433;
+    color: #FFFFFF;
+    font-size: 1rem;
+    font-weight: 500;
+    border-style: none;
+  }
+  .brand__wrapper {
+    padding: 80px 159px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+  }
+  .brand__info {
+    display: flex;
+    gap: 320px;
+    align-items: center;
+  }
+  .brand__title {
+    font-weight: 600;
+    font-size: 32px;
+    color: #212121;
+  }
+  .brand__minititle {
+    color: #424242;
+    font-size: 1rem;
+    font-weight: 400;
+  }
+  .brand__menu {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 20px;
+  }
+  .brand__item {
+    border: 1px solid #C7C7C7;
+    padding: 10px 14px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    width: 140px;
+    height: 110px;
+  }
+  .brand__text {
+    font-weight: 500;
+    font-size: 13px;
+    color: #212121;
+  }
+  .brand__btn {
+    padding: 20px 106px;
+    background-color: #DC4433;
+    color: #FFFFFF;
+    border-radius: 4px;
+    font-size: 1rem;
+    font-weight: 500;
+    border-style: none;
+  }
+  .click__wrapper {
+    margin: 0 159px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    background-image: url("/scss/pages/main/blacj.jpg");
+    color: #FFFFFF;
+  }
+  .click__title {
+    font-size: 32px;
+    font-weight: 600;
+  }
+  .click__text {
+    font-size: 18px;
+    font-weight: 600;
+  }
+  .click__info {
+    display: flex;
+    gap: 20px;
+    margin-top: 25px;
+  }
+  .click__box {
+    padding: 20px 15px;
+    width: 160px;
+    height: 60px;
+    background-color: #FFFFFF;
+    border-radius: 4px;
+    color: #C7C7C7;
+    position: relative;
+  }
+  .click-active::after {
+    content: "";
+    width: 6px;
+    height: 4px;
+    background-image: url("/scss/pages/main/active.png");
+    background-size: cover;
+    position: absolute;
+    top: calc(50% - 2px);
+    right: 25px;
+  }
+  .click__btn {
+    padding: 20px 16px;
+    background-color: #DC4433;
+    border-style: none;
+    border-radius: 4px;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #FFFFFF;
+    height: 60px;
+    width: 160px;
+  }
+  .click__label {
+    margin-left: 480px;
+    display: flex;
+    gap: 10px;
+  }
+  .label-text {
+    font-size: 10px;
+    font-weight: 400;
+    width: 376px;
+  }
+  .special-text {
+    text-decoration: underline;
+  }
+  .offer__wrapper {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    gap: 40px;
+    padding: 80px 0;
+    justify-content: center;
+    align-items: center;
+  }
+  .offer__info {
+    display: flex;
+    gap: 393px;
+    align-items: center;
+  }
+  .offer__title {
+    font-weight: 600;
+    font-size: 32px;
+    color: #212121;
+  }
+  .offer__minititle {
+    font-size: 1rem;
+    font-weight: 400;
+    color: #424242;
+  }
+  .offer__menu {
+    display: flex;
+    gap: 20px;
+  }
+  .offer__item {
+    border: 1px solid #C7C7C7;
+    border-radius: 4px;
+    width: 300px;
+  }
+  .offer__img {
+    width: 300px;
+  }
+  .offer__subinfo {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: #212121;
+  }
+  .offer__subtitle {
+    font-size: 24px;
+    font-weight: 500;
+  }
+  .offer__subminititle {
+    font-size: 20px;
+    font-weight: 400;
+  }
+  .offer__submenu {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 1fr 1.2fr;
+    row-gap: 15px;
+    -moz-column-gap: 30px;
+         column-gap: 30px;
+    border-top: 1px solid #C7C7C7;
+    border-bottom: 1px solid #C7C7C7;
+    padding: 15px 0;
+  }
+  .offer__item {
+    font-size: 13px;
+    font-weight: 500;
+  }
+  .grey {
+    color: #424242;
+    font-weight: 400;
+  }
+  .offer__price {
+    font-size: 18px;
+    font-weight: 500;
+    margin: 5px 0 15px;
+  }
+  .offer__subbtn {
+    padding: 10px 111px;
+    background-color: #DC4433;
+    color: #FFFFFF;
+    border-radius: 4px;
+    border-style: none;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  .advan__wrapper {
+    padding: 0 159px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    color: #212121;
+  }
+  .advan__title {
+    font-size: 32px;
+    font-weight: 600;
+  }
+  .advan__menu {
+    display: flex;
+    gap: 20px;
+  }
+  .advan__item {
+    width: 220px;
+    height: 180px;
+    border-radius: 4px;
+    border: 1px solid #C7C7C7;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    box-shadow: 10px 10px 24px 0px rgba(188, 188, 188, 0.2509803922);
+  }
+  .advan__img {
+    width: 64px;
+    height: 64px;
+  }
+  .add__wrapper {
+    padding: 80px 159px;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    transform: scale(0.85);
+    margin-left: -76px;
+  }
+  .add__img {
+    position: relative;
+  }
+  .add-1 {
+    grid-row: 2 span;
+  }
+  .ask__wrapper {
+    margin: 0 159px;
+    padding: 40px 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    background-image: url("/scss/pages/main/blacj.jpg");
+    color: #FFFFFF;
+    width: 940px;
+    height: 293px;
+  }
+  .ask__title {
+    font-size: 32px;
+    font-weight: 600;
+  }
+  .ask__text {
+    font-size: 18px;
+    font-weight: 600;
+  }
+  .ask__info {
+    display: flex;
+    gap: 20px;
+    margin-top: 25px;
+  }
+  .ask__box {
+    padding: 20px 25px;
+    width: 205px;
+    background-color: #FFFFFF;
+    border-radius: 4px;
+    color: #C7C7C7;
+    position: relative;
+    height: 60px;
+  }
+  .ask__btn {
+    padding: 20px 61px;
+    background-color: #DC4433;
+    border-style: none;
+    border-radius: 4px;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #FFFFFF;
+  }
+  .credit__wrapper {
+    padding: 100px 159px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    color: #212121;
+  }
+  .credit__info {
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+  }
+  .credit__title {
+    font-size: 32px;
+    font-weight: 600;
+  }
+  .credit__minititle {
+    font-size: 1rem;
+    font-weight: 400;
+    color: #424242;
+  }
+  .credit__menu {
+    display: flex;
+    gap: 20px;
+  }
+  .credit__item {
+    width: 460px;
+    padding: 30px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    border: 1px solid #C7C7C7;
+    border-radius: 4px;
+    box-shadow: 10px 10px 24px 0px rgba(188, 188, 188, 0.2509803922);
+  }
+  .credit__img {
+    max-width: 74px;
+    height: 70px;
+  }
+  .credit__subtitle {
+    margin-top: 5px;
+    font-size: 24px;
+    font-weight: 600;
+  }
+  .credit__box {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  .credit__text {
+    font-size: 1rem;
+    font-weight: 400;
+    color: #424242;
+  }
+  .partner__wrapper {
+    padding: 50px 159px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    gap: 40px;
+    background-color: #fafafa;
+    justify-content: center;
+    align-items: center;
+  }
+  .partner__title {
+    color: #212121;
+    font-size: 32px;
+    font-weight: 600;
+    margin-right: 690px;
+  }
+  .partner__menu {
+    display: flex;
+    gap: 20px;
+  }
+  .partner__item {
+    width: 140px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+    box-shadow: 10px 10px 24px 0px rgba(188, 188, 188, 0.2509803922);
+  }
+  .partner__img {
+    width: 140px;
+  }
+  .news__wrapper {
+    padding: 50px 159px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    color: #212121;
+  }
+  .news__info {
+    display: flex;
+    gap: 689px;
+    align-items: center;
+  }
+  .news__title {
+    font-size: 32px;
+    font-weight: 600;
+  }
+  .news__minititle {
+    font-size: 1rem;
+    font-weight: 400;
+    color: #424242;
+  }
+  .news__menu {
+    display: flex;
+    gap: 20px;
+  }
+  .news__img {
+    width: 300px;
+    height: 190px;
+  }
+  .news__item {
+    border: 1px solid #C7C7C7;
+    border-radius: 4px;
+    width: 300px;
+  }
+  .news__box {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .news__data {
+    font-size: 12px;
+    font-weight: 400;
+    color: #424242;
+  }
+  .news__subtitle {
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .news__subtext {
+    margin: 5px 0 18px;
+  }
+  .location__wrapper {
+    background-image: url("/scss/pages/main/location.png");
+    background-size: cover;
+    height: 560px;
+    margin-top: 100px;
+    position: relative;
+  }
+  .location__img {
+    position: absolute;
+    top: 94px;
+    left: 568px;
+  }
+}
 .contact__wrapper {
   color: #212121;
   padding: 30px 309px;
