--- a/views/index.html
+++ b/views/index.html
@@ -81,11 +81,11 @@
                 *Акционное предложение, точную цену уточняйте у продавца
               </p>
             </div>
-              <img
-            src="../scss/pages/main/hero.svg"
-            class="hero__img"
-            alt="red car"
-          />
+            <img
+              src="../scss/pages/main/hero.svg"
+              class="hero__img"
+              alt="red car"
+            />
           </div>
           <ul class="hero__menu">
             <li class="hero__item item-active"></li>
@@ -806,14 +806,157 @@
           </div>
         </div>
       </section>
-      <section class="location">
+      <section class="map">
         <div class="container">
-          <div class="location__wrapper">
-            <img
-              src="../scss/pages/main/location.place.png"
-              alt=""
-              class="location__img"
-            />
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2174.769607869175!2d37.43235591331973!3d55.756546994702724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b5492ac717086d%3A0xf30772eb7c331e71!2zS3J5bGF0c2theWEgVWxpdHNhLCAyINGB0YLRgNC-0LXQvdC40LUgNCwgTW9za3ZhLCBSdXNzaWEsIDEyMTU1Mg!5e0!3m2!1sen!2s!4v1735844066460!5m2!1sen!2s"
+            width="1728"
+            height="560"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+          <div class="map__wrapper">
+            <a class="x-cross" href="#">X</a>
+            <p class="map-title">АвтоДинамика</p>
+            <p class="map-subtitle">
+              Автосалонпродажа автомобилей <br />
+              с пробегом
+            </p>
+            <div class="map-stars">
+              <img
+                width="24"
+                src="/scss/pages/category/assests/star.png"
+                alt="star"
+                class="stars-img"
+              />
+              <img
+                width="24"
+                src="/scss/pages/category/assests/star.png"
+                alt="star"
+                class="stars-img"
+              />
+              <img
+                width="24"
+                src="/scss/pages/category/assests/star.png"
+                alt="star"
+                class="stars-img"
+              />
+              <img
+                width="24"
+                src="/scss/pages/category/assests/star.png"
+                alt="star"
+                class="stars-img"
+              />
+              <img
+                width="24"
+                src="/scss/pages/category/assests/star.png"
+                alt="star"
+                class="stars-img"
+              />
+              <p class="stars-rate">5,0</p>
+              <p class="map-open">Открыто до 19:00</p>
+              <img
+                height="25"
+                src="/scss/pages/category/assests/down-arrow.svg"
+                alt=""
+                class="map-down"
+              />
+            </div>
+            <ul class="map-location">
+              <li class="map-info">
+                <img
+                  width="24"
+                  src="/scss/pages/category/assests/location.png"
+                  alt="location"
+                  class="location-img"
+                />
+                <p class="map-place-info">улица Крылатская, 2, корп. 4</p>
+              </li>
+              <li class="map-info">
+                <img
+                  width="24"
+                  src="/scss/pages/category/assests/phone-call.png"
+                  alt="location"
+                  class="location-img"
+                />
+                <p class="map-place-info">
+                  8 (495) 374-94-88
+                  <span class="grey-one"
+                    >4
+                    <img
+                      width="24"
+                      src="/scss/pages/category/assests/down-arrow.svg"
+                      alt=""
+                    />
+                  </span>
+                </p>
+              </li>
+              <li class="map-info">
+                <img
+                  width="24"
+                  src="/scss/pages/category/assests/location.png"
+                  alt="location"
+                  class="location-img"
+                />
+                <a
+                  href="https//:auto-dinamika.com"
+                  class="map-place-info blue-one"
+                  >auto-dinamika.com</a
+                >
+              </li>
+            </ul>
+            <ul class="map-distance">
+              <li class="map-distance-way">
+                <img
+                  width="20"
+                  src="/scss/pages/category/assests/metro.png"
+                  alt=""
+                  class="way-img"
+                />
+                <p class="distance-name">Молодёжная</p>
+                <img
+                  width="20"
+                  src="/scss/pages/category/assests/man.png"
+                  alt=""
+                  class="distance-img"
+                />
+                <p class="distance-number">2,7 км</p>
+              </li>
+              <li class="map-distance-way">
+                <img
+                  width="20"
+                  src="/scss/pages/category/assests/metro.png"
+                  alt=""
+                  class="way-img"
+                />
+                <p class="distance-name">Терехово</p>
+                <img
+                  width="20"
+                  src="/scss/pages/category/assests/man.png"
+                  alt=""
+                  class="distance-img"
+                />
+                <p class="distance-number">2,92 км</p>
+              </li>
+              <li class="map-distance-way">
+                <img
+                  width="20"
+                  src="/scss/pages/category/assests/metro.png"
+                  alt=""
+                  class="way-img"
+                />
+                <p class="distance-name">Крылатское</p>
+                <img
+                  width="20"
+                  src="/scss/pages/category/assests/man.png"
+                  alt=""
+                  class="distance-img"
+                />
+                <p class="distance-number">3,1 км</p>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
